Finished Wishlist page

--- a/Pages/Wishlist/wishlist.html
+++ b/Pages/Wishlist/wishlist.html
@@ -183,37 +183,258 @@
             <h1 class="text-center"><span class="y">Y</span>our Wishlist</h1>
           </div>
           <div class="col-md-2 mb-3 py-0 d-none d-md-block">
+            <h3 class="categories mb-3">Category</h3>
             <div class="card left-card">
-              <h3 class="categories">Categories</h3>
-              <ul class="list-group">
-                <li class="list-group-item p-0 my-2">Clerical GOODS</li>
-                <li class="list-group-item p-0 my-2">School & College</li>
-                <li class="list-group-item p-0 my-2">Office Labels</li>
-                <li class="list-group-item p-0 my-2">Writing Instrument</li>
-                <li class="list-group-item p-0 my-2">Desk Accessories</li>
-                <li class="list-group-item p-0 my-2">Blinding Lamination</li>
-                <li class="list-group-item p-0 my-2">Hole punches</li>
-              </ul>
-            </div>
-            <div class="card right-card my-3">
-              <h3 class="topic">Sub Category</h3>
-              <ul class="list-group">
-                <li class="list-group-item p-0 my-2">Electronics & Gadgets.</li>
-                <li class="list-group-item p-0 my-2">
-                  Technology and Innovation
-                </li>
-                <li class="list-group-item p-0 my-2">Games</li>
-                <li class="list-group-item p-0 my-2">Stationery Consumable</li>
-                <li class="list-group-item p-0 my-2">Accessories</li>
-                <li class="list-group-item p-0 my-2">Cosmetics and Beauty</li>
-                <li class="list-group-item p-0 my-2">Filling Archives</li>
-                <li class="list-group-item p-0 my-2">label Printer</li>
-              </ul>
+              <p class="text-start p-0">
+                <a
+                  class="side-link p-0"
+                  data-bs-toggle="collapse"
+                  href="#collapseExample1"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapseExample"
+                >
+                  Clerical GOODS
+                </a>
+              </p>
+              <div class="collapse" id="collapseExample1">
+                <div class="card ms-3 right-card">
+                  <h5 class="topic">Sub Category</h5>
+                  <ul class="list-group">
+                    <li class="list-group-item p-0 my-2">
+                      Electronics & Gadgets.
+                    </li>
+                    <li class="list-group-item p-0 my-2">
+                      Technology and Innovation
+                    </li>
+                    <li class="list-group-item p-0 my-2">Games</li>
+                    <li class="list-group-item p-0 my-2">
+                      Stationery Consumable
+                    </li>
+                    <li class="list-group-item p-0 my-2">Accessories</li>
+                    <li class="list-group-item p-0 my-2">
+                      Cosmetics and Beauty
+                    </li>
+                    <li class="list-group-item p-0 my-2">Filling Archives</li>
+                    <li class="list-group-item p-0 my-2">label Printer</li>
+                  </ul>
+                </div>
+              </div>
+              <p class="text-start p-0">
+                <a
+                  class="side-link p-0"
+                  data-bs-toggle="collapse"
+                  href="#collapseExample2"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapseExample"
+                >
+                  School & Colleges
+                </a>
+              </p>
+              <div class="collapse" id="collapseExample2">
+                <div class="card ms-3 right-card">
+                  <h5 class="topic">Sub Category</h5>
+                  <ul class="list-group">
+                    <li class="list-group-item p-0 my-2">
+                      Electronics & Gadgets.
+                    </li>
+                    <li class="list-group-item p-0 my-2">
+                      Technology and Innovation
+                    </li>
+                    <li class="list-group-item p-0 my-2">Games</li>
+                    <li class="list-group-item p-0 my-2">
+                      Stationery Consumable
+                    </li>
+                    <li class="list-group-item p-0 my-2">Accessories</li>
+                    <li class="list-group-item p-0 my-2">
+                      Cosmetics and Beauty
+                    </li>
+                    <li class="list-group-item p-0 my-2">Filling Archives</li>
+                    <li class="list-group-item p-0 my-2">label Printer</li>
+                  </ul>
+                </div>
+              </div>
+              <p class="text-start p-0">
+                <a
+                  class="side-link p-0"
+                  data-bs-toggle="collapse"
+                  href="#collapseExample3"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapseExample"
+                >
+                  Office Labels
+                </a>
+              </p>
+              <div class="collapse" id="collapseExample3">
+                <div class="card ms-3 right-card">
+                  <h5 class="topic">Sub Category</h5>
+                  <ul class="list-group">
+                    <li class="list-group-item p-0 my-2">
+                      Electronics & Gadgets.
+                    </li>
+                    <li class="list-group-item p-0 my-2">
+                      Technology and Innovation
+                    </li>
+                    <li class="list-group-item p-0 my-2">Games</li>
+                    <li class="list-group-item p-0 my-2">
+                      Stationery Consumable
+                    </li>
+                    <li class="list-group-item p-0 my-2">Accessories</li>
+                    <li class="list-group-item p-0 my-2">
+                      Cosmetics and Beauty
+                    </li>
+                    <li class="list-group-item p-0 my-2">Filling Archives</li>
+                    <li class="list-group-item p-0 my-2">label Printer</li>
+                  </ul>
+                </div>
+              </div>
+              <p class="text-start p-0">
+                <a
+                  class="side-link p-0"
+                  data-bs-toggle="collapse"
+                  href="#collapseExample4"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapseExample"
+                >
+                  Writing Instruments
+                </a>
+              </p>
+              <div class="collapse" id="collapseExample4">
+                <div class="card ms-3 right-card">
+                  <h5 class="topic">Sub Category</h5>
+                  <ul class="list-group">
+                    <li class="list-group-item p-0 my-2">
+                      Electronics & Gadgets.
+                    </li>
+                    <li class="list-group-item p-0 my-2">
+                      Technology and Innovation
+                    </li>
+                    <li class="list-group-item p-0 my-2">Games</li>
+                    <li class="list-group-item p-0 my-2">
+                      Stationery Consumable
+                    </li>
+                    <li class="list-group-item p-0 my-2">Accessories</li>
+                    <li class="list-group-item p-0 my-2">
+                      Cosmetics and Beauty
+                    </li>
+                    <li class="list-group-item p-0 my-2">Filling Archives</li>
+                    <li class="list-group-item p-0 my-2">label Printer</li>
+                  </ul>
+                </div>
+              </div>
+              <p class="text-start p-0">
+                <a
+                  class="side-link p-0"
+                  data-bs-toggle="collapse"
+                  href="#collapseExample5"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapseExample"
+                >
+                  Desk Accessories
+                </a>
+              </p>
+              <div class="collapse" id="collapseExample5">
+                <div class="card right-card">
+                  <h5 class="topic">Sub Category</h5>
+                  <ul class="list-group">
+                    <li class="list-group-item p-0 my-2">
+                      Electronics & Gadgets.
+                    </li>
+                    <li class="list-group-item p-0 my-2">
+                      Technology and Innovation
+                    </li>
+                    <li class="list-group-item p-0 my-2">Games</li>
+                    <li class="list-group-item p-0 my-2">
+                      Stationery Consumable
+                    </li>
+                    <li class="list-group-item p-0 my-2">Accessories</li>
+                    <li class="list-group-item p-0 my-2">
+                      Cosmetics and Beauty
+                    </li>
+                    <li class="list-group-item p-0 my-2">Filling Archives</li>
+                    <li class="list-group-item p-0 my-2">label Printer</li>
+                  </ul>
+                </div>
+              </div>
+              <p class="text-start p-0">
+                <a
+                  class="side-link p-0"
+                  data-bs-toggle="collapse"
+                  href="#collapseExample6"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapseExample"
+                >
+                  Blinding Lamination
+                </a>
+              </p>
+              <div class="collapse" id="collapseExample6">
+                <div class="card ms-3 right-card">
+                  <h5 class="topic">Sub Category</h5>
+                  <ul class="list-group">
+                    <li class="list-group-item p-0 my-2">
+                      Electronics & Gadgets.
+                    </li>
+                    <li class="list-group-item p-0 my-2">
+                      Technology and Innovation
+                    </li>
+                    <li class="list-group-item p-0 my-2">Games</li>
+                    <li class="list-group-item p-0 my-2">
+                      Stationery Consumable
+                    </li>
+                    <li class="list-group-item p-0 my-2">Accessories</li>
+                    <li class="list-group-item p-0 my-2">
+                      Cosmetics and Beauty
+                    </li>
+                    <li class="list-group-item p-0 my-2">Filling Archives</li>
+                    <li class="list-group-item p-0 my-2">label Printer</li>
+                  </ul>
+                </div>
+              </div>
+              <p class="text-start p-0">
+                <a
+                  class="side-link p-0"
+                  data-bs-toggle="collapse"
+                  href="#collapseExample7"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="collapseExample"
+                >
+                  Hole punches
+                </a>
+              </p>
+              <div class="collapse" id="collapseExample7">
+                <div class="card ms-3 right-card">
+                  <h5 class="topic">Sub Category</h5>
+                  <ul class="list-group">
+                    <li class="list-group-item p-0 my-2">
+                      Electronics & Gadgets.
+                    </li>
+                    <li class="list-group-item p-0 my-2">
+                      Technology and Innovation
+                    </li>
+                    <li class="list-group-item p-0 my-2">Games</li>
+                    <li class="list-group-item p-0 my-2">
+                      Stationery Consumable
+                    </li>
+                    <li class="list-group-item p-0 my-2">Accessories</li>
+                    <li class="list-group-item p-0 my-2">
+                      Cosmetics and Beauty
+                    </li>
+                    <li class="list-group-item p-0 my-2">Filling Archives</li>
+                    <li class="list-group-item p-0 my-2">label Printer</li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col-md-9">
+          <div class="col-md-10">
             <div class="row g-4">
-              <div class="col-md-3 col-6">
+              <div class="col-md-4 col-xl-3 d-flex col-6">
                 <div class="card" style="max-width: 18rem">
                   <img src="./Images/star.png" class="card-img-top" alt="..." />
                   <div class="card-body px-0 pt-3">
@@ -228,7 +449,47 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div
+                class="col-6 col-md-4 col-xl-3 col-6 d-flex justify-content-xl-end"
+              >
+                <div class="card me-xxl-4" style="max-width: 18rem">
+                  <img
+                    src="./Images/makeup.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-6 col-md-4 col-xl-3 d-flex justify-content-md-end"
+              >
+                <div class="card" style="max-width: 18rem">
+                  <img src="./Images/star.png" class="card-img-top" alt="..." />
+                  <div class="card-body px-0 pt-3">
+                    <h5 class="card-title">Clerical GOODS</h5>
+                    <p class="card-text">10.00$</p>
+                    <button
+                      class="add-btn d-flex justify-content-center align-items-center gap-3"
+                    >
+                      <img src="./Images/cart.png" class="img-fluid" alt="" />
+                      Add
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-6 col-md-4 col-xl-3 d-flex justify-content-xl-end"
+              >
                 <div class="card" style="max-width: 18rem">
                   <img
                     src="./Images/makeup.png"
@@ -247,7 +508,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-6 col-md-4 col-xl-3 d-flex">
                 <div class="card" style="max-width: 18rem">
                   <img src="./Images/star.png" class="card-img-top" alt="..." />
                   <div class="card-body px-0 pt-3">
@@ -262,8 +523,10 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-3 col-6">
-                <div class="card" style="max-width: 18rem">
+              <div
+                class="col-md-4 col-xl-3 d-flex justify-content-xl-end col-6"
+              >
+                <div class="card me-xxl-4" style="max-width: 18rem">
                   <img
                     src="./Images/makeup.png"
                     class="card-img-top"
@@ -281,7 +544,9 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div
+                class="col-md-4 col-xl-3 d-flex justify-content-xl-end col-6"
+              >
                 <div class="card" style="max-width: 18rem">
                   <img src="./Images/star.png" class="card-img-top" alt="..." />
                   <div class="card-body px-0 pt-3">
@@ -296,41 +561,9 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-3 col-6">
-                <div class="card" style="max-width: 18rem">
-                  <img
-                    src="./Images/makeup.png"
-                    class="card-img-top"
-                    alt="..."
-                  />
-                  <div class="card-body px-0 pt-3">
-                    <h5 class="card-title">Clerical GOODS</h5>
-                    <p class="card-text">10.00$</p>
-                    <button
-                      class="add-btn d-flex justify-content-center align-items-center gap-3"
-                    >
-                      <img src="./Images/cart.png" class="img-fluid" alt="" />
-                      Add
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-6">
-                <div class="card" style="max-width: 18rem">
-                  <img src="./Images/star.png" class="card-img-top" alt="..." />
-                  <div class="card-body px-0 pt-3">
-                    <h5 class="card-title">Clerical GOODS</h5>
-                    <p class="card-text">10.00$</p>
-                    <button
-                      class="add-btn d-flex justify-content-center align-items-center gap-3"
-                    >
-                      <img src="./Images/cart.png" class="img-fluid" alt="" />
-                      Add
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-6">
+              <div
+                class="col-md-4 col-xl-3 d-flex justify-content-xl-end col-6"
+              >
                 <div class="card" style="max-width: 18rem">
                   <img
                     src="./Images/makeup.png"
